--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,7 +49,7 @@ jobs:
         curl -L https://github.com/golang-migrate/migrate/releases/download/v4.15.2/migrate.linux-arm64.tar.gz | tar xvz
         cd ../
         sudo mv migrate /usr/bin/migrate
-        ls /use/bin
+        ls /usr/bin
         which migrate
 
     - name: Run migration
