--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,7 +48,7 @@ jobs:
     - name: Install golang-migrate
       run: |
         curl -L https://github.com/golang-migrate/migrate/releases/download/v4.12.2/migrate.linux-arm64.tar.gz | tar xvz
-        sudo mv migrate /usr/bin/migrate
+        sudo mv migrate.linux-arm64 /usr/bin/migrate
         which migrate
 
     - name: Run migration
