--- a/app.env
+++ b/app.env
@@ -3,3 +3,4 @@ DB_DRIVER=postgres
 SERVER_ADDRESS=0.0.0.0:8080
 ACCESS_TOKEN_DURATION=15m
 TOKEN_SYMMETRIC_KEY=e1a8a426b3586ca9445fad2ba9f28727
+REFRESH_TOKEN_DURATION=24h
