--- a/app.env
+++ b/app.env
@@ -1,6 +1,7 @@
 DB_SOURCE=postgresql://root:YvlHOGILzbVmqeKwbGkQ@simple-bank.crti8cccqylv.us-east-1.rds.amazonaws.com:5432/simple_bank
 DB_DRIVER=postgres
-SERVER_ADDRESS=0.0.0.0:8080
+HTTP_SERVER_ADDRESS=0.0.0.0:8080
+GRPC_SERVER_ADDRESS=0.0.0.0:9090
 ACCESS_TOKEN_DURATION=15m
 TOKEN_SYMMETRIC_KEY=e1a8a426b3586ca9445fad2ba9f28727
 REFRESH_TOKEN_DURATION=24h
