add grpc interceptor

--- a/app.env
+++ b/app.env
@@ -1,3 +1,4 @@
+ENVIRONMENT=development
 DB_SOURCE=postgresql://root:YvlHOGILzbVmqeKwbGkQ@simple-bank.crti8cccqylv.us-east-1.rds.amazonaws.com:5432/simple_bank
 DB_DRIVER=postgres
 MIGRATION_URL=file://db/migration
