--- a/app.env
+++ b/app.env
@@ -7,3 +7,4 @@ GRPC_SERVER_ADDRESS=0.0.0.0:9090
 ACCESS_TOKEN_DURATION=15m
 TOKEN_SYMMETRIC_KEY=e1a8a426b3586ca9445fad2ba9f28727
 REFRESH_TOKEN_DURATION=24h
+REDIS_ADDRESS=0.0.0.0:6379
