--- a/app.env
+++ b/app.env
@@ -8,3 +8,6 @@ ACCESS_TOKEN_DURATION=15m
 TOKEN_SYMMETRIC_KEY=e1a8a426b3586ca9445fad2ba9f28727
 REFRESH_TOKEN_DURATION=24h
 REDIS_ADDRESS=0.0.0.0:6379
+EMAIL_SENDER_NAME=Simple Bank
+EMAIL_SENDER_ADDRESS=seniorproject195@gmail.com
+EMAIL_SENDER_PASSWORD=ekyuvgbpemzrtrgh
